--- a/css/new-age.css
+++ b/css/new-age.css
@@ -152,7 +152,7 @@ section h2 {
   }
 }
 
-header.masthead {
+/*header.masthead {
   position: relative;
   width: 100%;
   padding-top: 150px;
@@ -161,6 +161,15 @@ header.masthead {
   background: url("../img/bg-pattern.png"), #7b4397;
   background: url("../img/bg-pattern.png"), -webkit-gradient(linear, right top, left top, from(#7b4397), to(#dc2430));
   background: url("../img/bg-pattern.png"), linear-gradient(to left, #7b4397, #dc2430);
+}*/
+
+header.masthead {
+  position: relative;
+  width: 100%;
+  padding-top: 150px;
+  padding-bottom: 100px;
+  color: white;
+
 }
 
 header.masthead .header-content {
@@ -200,7 +209,7 @@ header.masthead .device-container .screen img {
     font-size: 50px;
   }
   header.masthead .header-content .btn {
-    font-size: 45px;
+    font-size: 145px;
   }
   header.masthead .header-content .al {
     float : left;
@@ -421,7 +430,7 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
   padding-left: 0;
 }
 
-.btn-outline {
+/*.btn-outline {
   color: white;
   border: 1px solid;
   border-color: white;
@@ -431,6 +440,19 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
   color: white;
   border-color: #fdcc52;
   background-color: #fdcc52;
+}*/
+
+.btn-outline {
+
+  color: #fdcc52;
+  /*border-color: #fdcc52;
+  background-color: #fdcc52;*/
+}
+
+.btn-outline:hover, .btn-outline:focus, .btn-outline:active, .btn-outline.active {
+  color: white;
+  border: 1px solid;
+  border-color: white;
 }
 
 .btn {
@@ -444,3 +466,7 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
   font-size: 11px;
   padding: 15px 45px;
 }
+
+.video_wrap{ position:relative; width:100%; height:0; padding-bottom:56.25%; } 
+.video_wrap iframe{ position:absolute; width:100%; height:100% }
+
