--- a/css/new-age.css
+++ b/css/new-age.css
@@ -71,7 +71,7 @@ section h2 {
 }
 
 #mainNav .navbar-brand {
-  color: #fdcc52;
+  color: #ffffff;
   font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
   font-weight: 500;
   letter-spacing: 1px;
@@ -123,15 +123,24 @@ section h2 {
     color: fade(white, 70%);
   }
   #mainNav .navbar-brand:hover, #mainNav .navbar-brand:focus {
-    color: white;
+    color: rgb(251, 255, 0);
   }
-  #mainNav .navbar-nav > li > a,
+/*  #mainNav .navbar-nav > li > a,
   #mainNav .navbar-nav > li > a:focus {
     color: rgba(255, 255, 255, 0.7);
   }
   #mainNav .navbar-nav > li > a:hover,
   #mainNav .navbar-nav > li > a:focus:hover {
     color: white;
+  }*/
+
+  #mainNav .navbar-nav > li > a,
+  #mainNav .navbar-nav > li > a:focus {
+    color: white;
+  }
+  #mainNav .navbar-nav > li > a:hover,
+  #mainNav .navbar-nav > li > a:focus:hover {
+    color: rgb(217, 255, 0);
   }
   #mainNav.navbar-shrink {
     border-color: rgba(34, 34, 34, 0.1);
