--- a/css/new-age.css
+++ b/css/new-age.css
@@ -71,7 +71,7 @@ section h2 {
 }
 
 #mainNav .navbar-brand {
-  color: #ffffff;
+  color: #fcbd20;
   font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
   font-weight: 500;
   letter-spacing: 1px;
