--- a/css/new-age.css
+++ b/css/new-age.css
@@ -50,8 +50,15 @@ p {
   font-size: 18px;
   line-height: 1.5;
   margin-bottom: 20px;
+  text-align:left;
 }
+@media (min-width: 992px) {
 
+  p {
+    text-align:center;
+
+  }
+}
 section {
   padding: 100px 0;
 }
@@ -567,3 +574,6 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
     opacity: 1;
   }
 }
+
+
+
