--- a/css/new-age.css
+++ b/css/new-age.css
@@ -127,7 +127,8 @@ section h2 {
     background-color: transparent;
   }
   #mainNav .navbar-brand {
-    color: fade(white, 70%);
+    color: white;
+    /*color: fade(white, 70%);*/
   }
   #mainNav .navbar-brand:hover, #mainNav .navbar-brand:focus {
     color: rgb(251, 255, 0);
