--- a/css/new-age.css
+++ b/css/new-age.css
@@ -342,6 +342,14 @@ section.cta .cta-content h2 {
   color: white;
 }
 
+section.cta .cta-content h5 {
+  font-size: 30px;
+  max-width: 450px;
+  margin-top: 0;
+  margin-bottom: 25px;
+  color: white;
+}
+
 @media (min-width: 768px) {
   section.cta .cta-content h2 {
     font-size: 80px;
