--- a/css/new-age.css
+++ b/css/new-age.css
@@ -324,7 +324,7 @@ section.features .feature-item i {
 section.cta {
   position: relative;
   padding: 250px 0;
-  background-image: url("../img/bg-cta.jpg");
+  background-image: url("../img/clabfair.png");
   background-position: center;
   background-size: cover;
 }
@@ -344,7 +344,7 @@ section.cta .cta-content h2 {
 
 section.cta .cta-content h5 {
   font-size: 30px;
-  max-width: 450px;
+  max-width: 100%;
   margin-top: 0;
   margin-bottom: 25px;
   color: white;
