--- a/css/new-age.css
+++ b/css/new-age.css
@@ -493,15 +493,36 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
   font-size: 11px;
   padding: 15px 45px;
 }
+@media (max-width: 768px) {
+.mb-4 {
 
+top:300px;
+  /*border-color: #fdcc52;
+  background-color: #fdcc52;*/
+}
+}
+
+
+@media (min-width: 768px) {
 .mb-5 {
+
+  color: #fdcc52;
+  float: right;
+  margin-top: 400px;
+  /*border-color: #fdcc52;
+  background-color: #fdcc52;*/
+}
+}
+@media (max-width: 768px) {
+.mb-5 {
+  margin-top: 200px;
 
   color: #fdcc52;
   float: right;
   /*border-color: #fdcc52;
   background-color: #fdcc52;*/
 }
-
+}
 .video_wrap{ position:relative; width:100%; height:0; padding-bottom:56.25%; } 
 .video_wrap iframe{ position:absolute; width:100%; height:100% }
 
