--- a/css/new-age.css
+++ b/css/new-age.css
@@ -187,7 +187,7 @@ header.masthead {
   padding-top: 150px;
   padding-bottom: 100px;
   color: white;
-  background: linear-gradient(#fdcc52, #fdc539);
+  /*background: linear-gradient(#fdcc52, #fdc539);*/
 }
 
 header.masthead .header-content {
@@ -501,6 +501,15 @@ top:300px;
   background-color: #fdcc52;*/
 }
 }
+@media (min-width: 768px) {
+  .mb-4 {
+  
+  top:300px;
+  
+    /*border-color: #fdcc52;
+    background-color: #fdcc52;*/
+  }
+  }
 
 
 @media (min-width: 768px) {
