--- a/css/new-age.css
+++ b/css/new-age.css
@@ -442,7 +442,7 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
 }
 
 .bg-primary {
-  opacity:0;
+  /*opacity:0;*/
   background: #fdcc52;
   background: -webkit-gradient(linear, left top, left bottom, from(#fdcc52), to(#fdc539));
   background: linear-gradient(#fdcc52, #fdc539);
@@ -585,6 +585,58 @@ table.type10 td {
 table.type10 .even {
   background: #fdf3f5;
 }
+
+.bgmj {
+  position: relative;
+  padding: 250px 0;
+  background-image: url("../img/bgmj.jpg");
+  background-position: center;
+  background-size: cover;
+}
+
+.bgsy {
+  position: relative;
+  padding: 250px 0;
+  background-image: url("../img/bgsy.jpg");
+  background-position: center;
+  background-size: cover;
+}
+.bgts {
+  position: relative;
+  padding: 250px 0;
+  background-image: url("../img/bgts.jpg");
+  background-position: center;
+  background-size: cover;
+}
+.bgjh {
+  position: relative;
+  padding: 250px 0;
+  background-image: url("../img/bgjh.jpg");
+  background-position: center;
+  background-size: cover;
+}
+.bgmk {
+  position: relative;
+  padding: 250px 0;
+  background-image: url("../img/bgmk.jpg");
+  background-position: center;
+  background-size: cover;
+}
+
+.mhover {
+  position:absolute;
+  opacity: 1!important;
+  z-index: 99999;
+  display:none;
+}
+
+.member{
+  position: absolute;
+  bottom:50px;
+ text-shadow: 2px 0 0 #fff, -2px 0 0 #fff, 0 2px 0 #fff, 0 -2px 0 #fff, 1px 1px #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff; 
+}
+
+
 
 
 /* ----------------------------------------------
