--- a/css/new-age.css
+++ b/css/new-age.css
@@ -592,7 +592,9 @@ table.type10 .even {
   background-image: url("../img/bgmj.jpg");
   background-position: center;
   background-size: cover;
+  max-width: 100%!important;
 }
+
 
 .bgsy {
   position: relative;
@@ -600,6 +602,9 @@ table.type10 .even {
   background-image: url("../img/bgsy.jpg");
   background-position: center;
   background-size: cover;
+  max-width: 100%!important;
+
+
 }
 .bgts {
   position: relative;
@@ -607,6 +612,8 @@ table.type10 .even {
   background-image: url("../img/bgts.jpg");
   background-position: center;
   background-size: cover;
+  max-width: 100%!important;
+
 }
 .bgjh {
   position: relative;
@@ -614,6 +621,8 @@ table.type10 .even {
   background-image: url("../img/bgjh.jpg");
   background-position: center;
   background-size: cover;
+  max-width: 100%!important;
+
 }
 .bgmk {
   position: relative;
@@ -621,6 +630,8 @@ table.type10 .even {
   background-image: url("../img/bgmk.jpg");
   background-position: center;
   background-size: cover;
+  max-width: 100%!important;
+
 }
 
 .mhover {
@@ -628,6 +639,7 @@ table.type10 .even {
   opacity: 1!important;
   z-index: 99999;
   display:none;
+  padding:10px;
 }
 
 .member{
@@ -636,6 +648,20 @@ table.type10 .even {
  text-shadow: 2px 0 0 #fff, -2px 0 0 #fff, 0 2px 0 #fff, 0 -2px 0 #fff, 1px 1px #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff; 
 }
 
+.intro{
+  position:relative;
+  width:33.333333%;
+  
+  float:left;
+  
+}
+.intro2{
+  position:relative;
+  width:50%;
+  
+  float:left;
+  
+}
 
 
 
