--- a/css/new-age.css
+++ b/css/new-age.css
@@ -609,7 +609,7 @@ table.type10 .even {
 .bgts {
   position: relative;
   padding: 250px 0;
-  background-image: url("../img/bgts.jpg");
+  background-image: url("../img/clabfair.png");
   background-position: center;
   background-size: cover;
   max-width: 100%!important;
