--- a/css/map.css
+++ b/css/map.css
@@ -525,6 +525,16 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
   background-color: #fdcc52;*/
 }
 
+.thumbnail {
+
+  position : relative;
+  border-radius: 10px;
+  margin: 10px;
+  float : left;
+
+}
+
+
 .video_wrap{ position:relative; width:100%; height:0; padding-bottom:56.25%; } 
 .video_wrap iframe{ position:absolute; width:100%; height:100% }
 
