--- a/css/map.css
+++ b/css/map.css
@@ -202,6 +202,12 @@ section h2 {
   }
 }
 
+#video_panel{
+    width : 321px;
+    height : 181px;
+
+}
+
 /*header.masthead {
   position: relative;
   width: 100%;
@@ -545,6 +551,7 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
 
 .video_wrap{ position:relative; width:100%; height:0; padding-bottom:56.25%; } 
 .video_wrap iframe{ position:absolute; width:100%; height:100% }
+
 
 .text-blur-out {
 	-webkit-animation: text-blur-out 1.2s cubic-bezier(0.550, 0.085, 0.680, 0.530) 3s both;
