--- a/css/map.css
+++ b/css/map.css
@@ -214,6 +214,7 @@ object-fit: cover;
 #video_panel{
     width : 480px;
     height : 272px;
+    display : none;
 }
 #yt_panel{
   border-radius: 10px;
