--- a/css/map.css
+++ b/css/map.css
@@ -220,6 +220,8 @@ object-fit: cover;
 #yt_panel{
   border-radius: 10px;
   background-color: black;
+  width: 100%;
+  height: 100%;
 }
 
 /*header.masthead {
