--- a/css/map.css
+++ b/css/map.css
@@ -223,6 +223,13 @@ object-fit: cover;
   width: 100%;
   height: 100%;
 }
+.yt_class {
+  border-radius: 10px;
+  background-color: black;
+
+  width: 100%;
+  height: 100%;
+}
 
 /*header.masthead {
   position: relative;
