--- a/css/map.css
+++ b/css/map.css
@@ -223,19 +223,21 @@ overflow:hidden;
 object-fit: cover;
 }
 
-#video_panel{
-    width : 480px;
-    height : 272px;
-    display : none;
-    margin: 10px;
-    float: left; /*오른쪽에 찾을 수 없는 마진으로 가득채워져서 왼쪽 으로 정렬하면 해결됨*/
-}
+
 
 #yt_panel{
   border-radius: 10px;
   background-color: black;
   width: 100%;
   height: 100%;
+}
+@media (min-width: 530px) {
+  #video_panel{
+    width : 480px;
+    height : 272px;
+    display : none;
+    margin: 10px;
+    float: left; /*오른쪽에 찾을 수 없는 마진으로 가득채워져서 왼쪽 으로 정렬하면 해결됨*/
 }
 .yt_class {
   border-radius: 10px;
@@ -244,6 +246,27 @@ object-fit: cover;
   width: 100%;
   height: 100%;
 }
+}
+@media (max-width: 530px) {
+  #video_panel{
+    width : 352px;
+    height : 205px;
+    display : none;
+    margin: 10px;
+    float: left; /*오른쪽에 찾을 수 없는 마진으로 가득채워져서 왼쪽 으로 정렬하면 해결됨*/
+}
+
+
+  .yt_class {
+    border-radius: 10px;
+    background-color: black;
+  
+    width: 352px;
+    height: 205px;
+  }
+
+}
+
 
 /*header.masthead {
   position: relative;
