--- a/css/map.css
+++ b/css/map.css
@@ -866,7 +866,7 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
 
 .sHeader {
   box-shadow: 0 3px 5px grey;
-  height: 110px;
+  height: 85px;
   /*background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
   background: linear-gradient(-45deg, #ff5f37, #ff9659, hsl(36, 100%, 58%), #ffe46b);*/
 	background-size: 400% 400%;
@@ -1094,6 +1094,17 @@ color:rgb(255, 250, 232);*/
 }
        }
 
+
+
+.header_font {
+  font-size: 4vw;
+  text-shadow: 0px 0px 3px black
+}
+
+
+.mapDiv {
+  text-align: center;
+}
 
 .words {
   margin-left: 30px;
