--- a/css/new-age.css
+++ b/css/new-age.css
@@ -239,7 +239,12 @@ header.masthead .device-container .screen img {
 
 section.download {
   position: relative;
-  padding: 150px 0;
+  padding: 420px 0;
+  /*background-image: url("../img/clabfair.png");*/
+  background-position: center;
+  background-size: cover;
+  margin-bottom: -2px;
+  margin-left: -2px;
 }
 
 @media (max-width: 768px) {
@@ -328,12 +333,45 @@ section.features .feature-item i {
   -webkit-text-fill-color: transparent;
 }
 
-section.cta {
+section.video {
   position: relative;
-  padding: 250px 0;
-  background-image: url("../img/clabfair.png");
+  padding: 125px 0;
+/*background-image: url("../img/app.png");*/
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+section.video .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+section.raemian {
+  position: relative;
+  padding: 420px 0;
+  background-image: url("../img/sunny001.png");
   background-position: center;
   background-size: cover;
+  margin-bottom: -2px;
+  margin-left: -2px;
+}
+
+
+
+
+section.cta {
+  position: relative;
+  padding: 350px 0;
+  background-image: url("../img/ces.png");
+  background-position: center;
+  background-size: cover;
+  filter: blur(1px);
+  
 }
 
 section.cta .cta-content {
@@ -383,6 +421,33 @@ section.cta .overlay {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+}
+
+section.cta .overlay_blur {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+
+section.download .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+section.download .overlay:hover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0);
 }
 
 section.contact {
@@ -561,6 +626,110 @@ top:100px;
 	-webkit-animation: text-blur-out 1.2s cubic-bezier(0.550, 0.085, 0.680, 0.530) 3s both;
 	        animation: text-blur-out 1.2s cubic-bezier(0.550, 0.085, 0.680, 0.530) 3s both;
 }
+
+.blur_test {
+	color: transparent;
+	animation: blur 20s ease-out infinite; /* infinite 붙이면 반복*/
+	-webkit-animation: blur 20s ease-out infinite;
+}
+@keyframes blur {
+	0%		{text-shadow:  0 0 100px #fff; opacity:0;}
+	5%		{text-shadow:  0 0 90px #fff;}
+	15%		{opacity: 1;}
+	20%		{text-shadow:  0 0 0px #fff;}
+	80%		{text-shadow:  0 0 0px #fff;}
+	85%		{opacity: 1;}
+	95%		{text-shadow:  0 0 90px #fff;}
+	100%	{text-shadow:  0 0 100px #fff; opacity:0; }
+}
+
+@-webkit-keyframes blur {
+	0%		{text-shadow:  0 0 100px #fff; opacity:0; }
+	5%		{text-shadow:  0 0 90px #fff;}
+	15%		{opacity: 1;}
+	20%		{text-shadow:  0 0 0px #fff;}
+	80%		{text-shadow:  0 0 0px #fff;}
+	85%		{opacity: 1;}
+	95%		{text-shadow:  0 0 90px #fff;}
+	100%	{text-shadow:  0 0 100px #fff; opacity:0; }
+}
+
+.blur_test2 {
+	color: transparent;
+	animation: blur 10s ease-out ; /* infinite 붙이면 반복*/
+	-webkit-animation: blur 10s ease-out ;
+}
+@keyframes blur {
+	0%		{text-shadow:  0 0 100px #fff; opacity:0;}
+	5%		{text-shadow:  0 0 90px #fff;}
+	15%		{opacity: 1;}
+	20%		{text-shadow:  0 0 0px #fff;}
+	80%		{text-shadow:  0 0 0px #fff;}
+	85%		{opacity: 1;}
+	95%		{text-shadow:  0 0 90px #fff;}
+	100%	{text-shadow:  0 0 100px #fff; opacity:0; }
+}
+
+@-webkit-keyframes blur {
+	0%		{text-shadow:  0 0 100px #fff; opacity:0; }
+	5%		{text-shadow:  0 0 90px #fff;}
+	15%		{opacity: 1;}
+	20%		{text-shadow:  0 0 0px #fff;}
+	80%		{text-shadow:  0 0 0px #fff;}
+	85%		{opacity: 1;}
+	95%		{text-shadow:  0 0 90px #fff;}
+	100%	{text-shadow:  0 0 100px #fff; opacity:0; }
+}
+
+
+.fadein {
+  position: absolute!important;
+  top: 0px;
+  z-index: 0;
+  background-image: url(../img/sunnyfive_bg.png)!important;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  display: inline-block;
+  animation: fadein 6s;
+  -moz-animation: fadein 6s; /* Firefox */
+  -webkit-animation: fadein 6s; /* Safari and Chrome */
+  -o-animation: fadein 6s; /* Opera */
+}
+@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+@-moz-keyframes fadein { /* Firefox */
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+@-webkit-keyframes fadein { /* Safari and Chrome */
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+@-o-keyframes fadein { /* Opera */
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+
 
 .paralleogram {
 
@@ -753,6 +922,150 @@ margin-left: 2vh;
   float:left;
   
 }
+
+.hideme
+{
+    opacity:0;
+}
+.hideme2
+{
+    opacity:0;
+}
+
+.divh2
+{
+  font-size: 30px;
+    max-width: 100%;
+    margin-top: 0;
+    font-weight: bolder;
+    margin-bottom: 35px;
+}
+
+.box {
+  position: absolute;
+  width: 326px;
+  height: 200px;
+  border-radius: 5%;
+  overflow: hidden;
+}
+.profile {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
+
+
+
+
+
+
+
+.bg_opacity{
+background-position: center;
+background-image: url("../img/sunnyfive_bg.png");
+background-repeat: no-repeat;
+    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 2s; /* Firefox < 16 */
+        -ms-animation: fadein 2s; /* Internet Explorer */
+         -o-animation: fadein 2s; /* Opera < 12.1 */
+            animation: fadein 2s;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+
+
+.scale {
+  transform: scale(1);
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+  transition: all 0.3s ease-in-out;   /* 부드러운 모션을 위해 추가*/
+}
+.scale:hover {
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+}
+
+
+
+
+
+.stage:hover {
+  animation: animateBg 3s infinite linear;
+  background-color: #fff;
+  background-image: linear-gradient(90deg, #fff, #ffde5e, #fff, #ffde5e);
+  background-size: 300% 100%;
+
+
+}
+@keyframes animateBg {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 100% 0;
+  }
+}
+
+.stage2 {
+  animation: animateBg 2s infinite linear;
+  background-color: #fff;
+  background-image: linear-gradient(90deg, #da3287, #ffde5e, #da3287, #ffde5e);
+  background-size: 300% 100%;
+  box-shadow: 0 3px 14px #000;
+  border-radius: 1rem;
+  height: 200px;
+  width: 200px;
+}
+@keyframes animateBg {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 100% 0;
+  }
+}
+
+
+
+
+
+
+
 
 
 
