--- a/css/new-age.css
+++ b/css/new-age.css
@@ -25,9 +25,11 @@ a:hover, a:focus {
 }
 
 hr {
-  max-width: 100px;
+  position: absolute;
+  width: 600px;
+  max-width: 600px;
   margin: 25px auto 0;
-  border-width: 1px;
+  border-width: 21px;
   border-color: rgba(34, 34, 34, 0.1);
 }
 
@@ -932,6 +934,10 @@ margin-left: 2vh;
     opacity:0;
 }
 
+.bg_gradient{
+  background-image: linear-gradient(rgb(255, 255, 233), rgb(255, 240, 193));
+}
+
 .divh2
 {
   font-size: 30px;
@@ -1021,7 +1027,14 @@ background-repeat: no-repeat;
 }
 
 
-
+.features {
+  display: inline-block; 
+  max-width: 320px; 
+  margin-top: 10%;
+  margin-left: 2%;
+  z-index: 1;
+  
+}
 
 
 .stage:hover {
