--- a/css/new-age.css
+++ b/css/new-age.css
@@ -363,7 +363,14 @@ section.raemian {
   margin-left: -2px;
 }
 
-
+section.description {
+  position: relative;
+  padding: 400px 0;
+background-image: url("../img/bedroom.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
 
 section.cta {
@@ -685,13 +692,14 @@ top:100px;
 
 
 .fadein {
-  position: absolute!important;
+  /*position: absolute!important;*/
   top: 0px;
   z-index: 0;
   background-image: url(../img/sunnyfive_bg.png)!important;
   left: 50%;
   transform: translateX(-50%);
   width: 100%;
+  height:100%;
   display: inline-block;
   animation: fadein 6s;
   -moz-animation: fadein 6s; /* Firefox */
@@ -933,6 +941,10 @@ margin-left: 2vh;
 {
     opacity:0;
 }
+.hideme3
+{
+    opacity:0;
+}
 
 .bg_gradient{
   background-image: linear-gradient(rgb(255, 255, 233), rgb(255, 240, 193));
@@ -961,7 +973,11 @@ margin-left: 2vh;
 }
 
 
-
+.video_wrap2 {
+  width:100%;
+  height: auto;
+  margin : -3px;
+}
 
 
 
