--- a/css/new-age.css
+++ b/css/new-age.css
@@ -194,7 +194,7 @@ header.masthead {
 
 header.masthead .header-content {
   max-width: 100%;
-  margin-bottom: 100px;
+  margin-bottom: 0px;
   text-align: center;
 }
 
@@ -257,8 +257,20 @@ section.download {
 }
 
 section.download h2 {
-  font-size: 50px;
-  margin-top: 0;
+
+}
+
+@media (max-width: 768px) {
+  section.download h2{
+    font-size: 40px;
+    margin-top: 0;
+  }
+}
+@media (max-width: 768px) {
+  section.download h3{
+    font-size: 21px;
+    margin-top: 0;
+  }
 }
 
 section.download .badges .badge-link {
@@ -628,6 +640,19 @@ top:100px;
   background-color: #fdcc52;*/
 }
 }
+
+@media (max-width: 768px) {
+  .h3r {
+    display: none;
+    margin-top: 150px;
+  
+    color: #fdcc52;
+    float: right;
+    /*border-color: #fdcc52;
+    background-color: #fdcc52;*/
+  }
+  }
+
 .video_wrap{ position:relative; width:100%; height:0; padding-bottom:56.25%; } 
 .video_wrap iframe{ position:absolute; width:100%; height:100% }
 
@@ -645,6 +670,19 @@ text-transform: uppercase;
 color:rgb(0, 0, 0);
 font-weight: bold;
 }
+
+@media (max-width: 768px) {
+  .blur_test_font {
+    text-align: center;
+    width: 100%; 
+    font-size : 13px;
+    position : absolute;
+    text-transform: uppercase;
+    color:rgb(0, 0, 0);
+    font-weight: bold;
+    }
+  }
+
 
 .blur_test {
 	color: transparent;
@@ -726,6 +764,32 @@ font-weight: bold;
 	95%		{text-shadow:  0 0 90px #f5deb3;}
 	100%	{text-shadow:  0 0 100px #f5deb3; opacity:0; }
 }
+.blur_test5 {
+	color: transparent;
+	animation: blur 10s ease-out infinite; /* infinite 붙이면 반복*/
+	-webkit-animation: blur 10s ease-out infinite ;
+}
+@keyframes blur {
+	0%		{text-shadow:  0 0 100px #524c42; opacity:0;}
+	5%		{text-shadow:  0 0 90px #524c42;}
+	15%		{opacity: 1;}
+	20%		{text-shadow:  0 0 0px #524c42;}
+	80%		{text-shadow:  0 0 0px #524c42;}
+	85%		{opacity: 1;}
+	95%		{text-shadow:  0 0 90px #524c42;}
+	100%	{text-shadow:  0 0 100px #524c42; opacity:0; }
+}
+
+@-webkit-keyframes blur {
+	0%		{text-shadow:  0 0 100px #524c42; opacity:0; }
+	5%		{text-shadow:  0 0 90px #524c42;}
+	15%		{opacity: 1;}
+	20%		{text-shadow:  0 0 0px #524c42;}
+	80%		{text-shadow:  0 0 0px #524c42;}
+	85%		{opacity: 1;}
+	95%		{text-shadow:  0 0 90px #524c42;}
+	100%	{text-shadow:  0 0 100px #524c42; opacity:0; }
+}
 
 .fadein {
   /*position: absolute!important;*/
@@ -741,6 +805,7 @@ font-weight: bold;
   -moz-animation: fadein 6s; /* Firefox */
   -webkit-animation: fadein 6s; /* Safari and Chrome */
   -o-animation: fadein 6s; /* Opera */
+  background-position: right!important;
 }
 @keyframes fadein {
     from {
@@ -775,7 +840,57 @@ font-weight: bold;
     }
 }
 
+@media (max-width: 768px) {
 
+  .fadein {
+    /*position: absolute!important;*/
+    top: 0px;
+    z-index: 0;
+    background-image: url(../img/sunnyfive_bg.png)!important;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    height:auto;
+    display: inline-block;
+    animation: fadein 6s;
+    -moz-animation: fadein 6s; /* Firefox */
+    -webkit-animation: fadein 6s; /* Safari and Chrome */
+    -o-animation: fadein 6s; /* Opera */
+  }
+  @keyframes fadein {
+      from {
+          opacity: 0;
+      }
+      to {
+          opacity: 1;
+      }
+  }
+  @-moz-keyframes fadein { /* Firefox */
+      from {
+          opacity: 0;
+      }
+      to {
+          opacity: 1;
+      }
+  }
+  @-webkit-keyframes fadein { /* Safari and Chrome */
+      from {
+          opacity: 0;
+      }
+      to {
+          opacity: 1;
+      }
+  }
+  @-o-keyframes fadein { /* Opera */
+      from {
+          opacity: 0;
+      }
+      to {
+          opacity: 1;
+      }
+  }
+  
+}
 
 .paralleogram {
 
