--- a/css/new-age.css
+++ b/css/new-age.css
@@ -49,6 +49,7 @@ h6 {
 }
 
 p {
+  font-family: 'Catamaran';
   font-size: 18px;
   line-height: 1.5;
   margin-bottom: 20px;
@@ -57,12 +58,13 @@ p {
 @media (min-width: 992px) {
 
   p {
+    font-family: 'Catamaran';
     text-align:center;
 
   }
 }
 section {
-  padding: 100px 0;
+  padding: 50px 0;
 }
 
 section h2 {
@@ -472,6 +474,7 @@ section.download .overlay:hover {
 }
 
 section.contact {
+  background-color: rgb(252, 238, 115);
   text-align: center;
 }
 
