--- a/css/map.css
+++ b/css/map.css
@@ -1025,6 +1025,7 @@ display : none;
          padding: 10px;
          position : relative;
          float: left; 
+         display: none;
          /*min-height: calc(100vh - 80px);*/
          
        }
