--- a/css/map.css
+++ b/css/map.css
@@ -973,7 +973,7 @@ float: left;
     width:100%;
     height:90%;
     display: flex;
-    flex-direction: column-reverse;
+    /*flex-direction: column-reverse;*//*패널리스트 빼면서 빈자리가 생기고 그걸 메꾸기 위해서 */ 
 }
   #list {
          height:60%;
@@ -986,6 +986,8 @@ float: left;
        #yt {
 height: 40%;  /* The height is 400 pixels */
 /* width: calc(100% - 800px) !important;  /* The width is the width of the web page */
+
+width: 100%; /*패널리스트 빼면서 빈자리가 생기고 그걸 메꾸기 위해서 */
 margin: 0px;
 padding: 10px;
 position : relative;
@@ -994,7 +996,16 @@ display : block;
 
 
 }
+#video {
 
+  height: 100%;  /* The height is 400 pixels */
+  width: 100%;  /* The width is the width of the web page */
+  margin: 0px;
+  padding: 0px;
+  position : relative;
+  float: left; 
+  
+  }
 
 
 }
