--- a/css/map.css
+++ b/css/map.css
@@ -984,7 +984,7 @@ float: left;
          display: none;
        }
        #yt {
-height: 40%;  /* The height is 400 pixels */
+height: 100%;  /* The height is 400 pixels */
 /* width: calc(100% - 800px) !important;  /* The width is the width of the web page */
 
 width: 100%; /*패널리스트 빼면서 빈자리가 생기고 그걸 메꾸기 위해서 */
@@ -998,7 +998,7 @@ display : block;
 }
 #video {
 
-  height: 100%;  /* The height is 400 pixels */
+  height: 40%;  /* The height is 400 pixels */
   width: 100%;  /* The width is the width of the web page */
   margin: 0px;
   padding: 0px;
@@ -1006,7 +1006,16 @@ display : block;
   float: left; 
   
   }
+  #map {
 
+    height: 60%;  /* The height is 400 pixels */
+    width: 100%;  /* The width is the width of the web page */
+    margin: 0px;
+    padding: 0px;
+    position : relative;
+    float: left; 
+
+   }
 
 }
 /*@media (min-width: 768px) and (max-width:1128px) {
